Temp fix to intro-text wrapping in mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
+#intro-text {
+  font-size: 2.5vw;
+}
+
 .uk-navbar-container:not(.uk-navbar-transparent), .translucent {
   background: #111;
   opacity: 0.80;
